@@ -1,3 +1,11 @@
+2018-04-04  Thomas E. Dickey  <dickey@invisible-island.net>
+
+	* tests/da.py:
+	works for me (I fixed that in January 2015 from report by Nachman)
+
+	* tests/decrqss.py, tests/decera.py, tests/decsera.py, tests/decic.py, tests/decdc.py, tests/xterm_winops.py:
+	works for me
+
 2017-11-05  Thomas E. Dickey  <dickey@invisible-island.net>
 
 	* tests/decset.py:
